# unitemate-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
docs/: openapi.yml
scheduled_queries/: banned_by_pick_order.sql  by_match.sql  by_pokemon.sql  by_pokemon_move.sql
scheduled_queries/aggregation/: aggregate_ally_enemy_pokemon.sql  aggregate_by_pokemon.sql  aggregate_by_pokemon_combination.sql  aggregate_by_pokemon_move.sql
scheduled_queries/processed_origin/default/: ban_result.sql  match_result.sql  user_result.sql
src/api/: handler.py  models.py
src/csv_export/: aggregation_patterns.json  clientLibraryConfig.json  handler.py  pokemon_names.json
src/csv_export/sql/: aggregate_ally_enemy_pokemon.sql  aggregate_by_pokemon.sql  aggregate_by_pokemon_combination.sql  aggregate_by_pokemon_move.sql  origin.sql
src/match_api/: handler.py  models.py
